force-app/main/default/objects/Opportunity/fields/Tipo_de_paqueteria__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_paqueteria__c</fullName>
    <label>Tipo de paquetería</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aéreo</fullName>
            </value>
            <value>
                <fullName>Terrestre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>