force-app/main/default/objects/Opportunity/fields/Total_Amount_Aceptada__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Aceptada__c</fullName>
    <label>Total Amount Aceptada</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>