force-app/main/default/objects/Opportunity/fields/Total_Amount_Rechazados_Anual__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Rechazados_Anual__c</fullName>
    <label>Total Amount Rechazados Anual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>