force-app/main/default/objects/Opportunity/fields/Total_Buy_Price2__c.field-meta.xml
<CustomField>
    <fullName>Total_Buy_Price2__c</fullName>
    <label>Total Buy Price</label>
    <summarizedField>OpportunityLineItem.Buy_Price__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>