force-app/main/default/objects/Opportunity/fields/Total_Cerrado_Ganado__c.field-meta.xml
<CustomField>
    <fullName>Total_Cerrado_Ganado__c</fullName>
    <label>Total Cerrado Ganado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>