force-app/main/default/objects/Opportunity/fields/Total_Cerrado_Ganado_Anual__c.field-meta.xml
<CustomField>
    <fullName>Total_Cerrado_Ganado_Anual__c</fullName>
    <label>Total Cerrado Ganado Anual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>