force-app/main/default/objects/Opportunity/fields/Total_Cotizado__c.field-meta.xml
<CustomField>
    <fullName>Total_Cotizado__c</fullName>
    <label>Total Cotizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>