force-app/main/default/objects/Opportunity/fields/Total_Cotizado_Anual__c.field-meta.xml
<CustomField>
    <fullName>Total_Cotizado_Anual__c</fullName>
    <label>Total Cotizado Anual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>