force-app/main/default/objects/Opportunity/fields/Total_IEQ_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Total_IEQ_Service_Line__c</fullName>
    <formula>Import_Export_Quote_Order__r.Total_Services_Sell_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total IEQ Service Line</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>