force-app/main/default/objects/Opportunity/fields/Total_IEQO__c.field-meta.xml
<CustomField>
    <fullName>Total_IEQO__c</fullName>
    <description>Suma de las IEQO relacionadas en la oportunidad</description>
    <label>Total IEQO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>