force-app/main/default/objects/Opportunity/fields/Total_IEQO_Creados__c.field-meta.xml
<CustomField>
    <fullName>Total_IEQO_Creados__c</fullName>
    <label>Total IEQO Creados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>