force-app/main/default/objects/Opportunity/fields/Total_IEQO_Operado__c.field-meta.xml
<CustomField>
    <fullName>Total_IEQO_Operado__c</fullName>
    <label>Total IEQO Operado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>