force-app/main/default/objects/Opportunity/fields/Total_Opportunity_Anual__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity_Anual__c</fullName>
    <label>Total Opportunity Anual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>