force-app/main/default/objects/Opportunity/fields/Total_Productos__c.field-meta.xml
<CustomField>
    <fullName>Total_Productos__c</fullName>
    <label>Total Productos</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>