force-app/main/default/objects/Opportunity/fields/Total_Productos_Aceptados__c.field-meta.xml
<CustomField>
    <fullName>Total_Productos_Aceptados__c</fullName>
    <label>Total Productos Aceptados</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Status__c</field>
        <operation>equals</operation>
        <value>Aceptada</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>