force-app/main/default/objects/Opportunity/fields/Total_Products__c.field-meta.xml
<CustomField>
    <fullName>Total_Products__c</fullName>
    <label>Total Products</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>