force-app/main/default/objects/Opportunity/fields/Total_Quotes_Vendido__c.field-meta.xml
<CustomField>
    <fullName>Total_Quotes_Vendido__c</fullName>
    <label>Total Quotes Vendido</label>
    <summarizedField>Quote.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>Quote.Vendido__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>