force-app/main/default/objects/Opportunity/fields/Usuario_IC__c.field-meta.xml
<CustomField>
    <fullName>Usuario_IC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario IC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>