force-app/main/default/objects/Opportunity/recordTypes/Proyectos.recordType-meta.xml
<RecordType>
    <fullName>Proyectos</fullName>
    <active>true</active>
    <businessProcess>Proyectos</businessProcess>
    <label>Proyecto</label>
</RecordType>