force-app/main/default/objects/Opportunity/recordTypes/Standar_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Standar_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Standar Opportunity</businessProcess>
    <label>Standar Opportunity</label>
</RecordType>