force-app/main/default/objects/Opportunity/validationRules/ActivacionAutorizada.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivacionAutorizada</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Account.ActiveSap__c  = false,
  RecordType.Name = &quot;Proyectos&quot;,
ISPICKVAL(StageName, &quot;Activación Cliente&quot;)
)</errorConditionFormula>
    <errorDisplayField>Activacion_autorizada__c</errorDisplayField>
    <errorMessage>PROJ001- Favor de revisar si ya se activó la cuenta.</errorMessage>
</ValidationRule>