force-app/main/default/objects/Opportunity/validationRules/DebeTenerCosto.validationRule-meta.xml
<ValidationRule>
    <fullName>DebeTenerCosto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(StageName , &quot;VoBo IC&quot;),
RecordType.Name = &quot;Proyectos&quot;,
OR(
Amount = 0,
ISNULL(Amount)
)
)</errorConditionFormula>
    <errorDisplayField>Amount</errorDisplayField>
    <errorMessage>PROJ004: Antes de proceder al estatus de VoBo IC, el campo de &quot;Amount&quot; no puede ser 0. Favor de agregar productos.</errorMessage>
</ValidationRule>