force-app/main/default/objects/Opportunity/validationRules/MotivoDeRechazo.validationRule-meta.xml
<ValidationRule>
    <fullName>MotivoDeRechazo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(StageName,&quot;Declinar&quot;),
 RecordType.Name = &quot;Proyectos&quot;,
  ISPICKVAL( Loss_Reason__c , &quot;&quot;)  

)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>PROJ006: Favor de agregar un motivo de pérdida.</errorMessage>
</ValidationRule>