force-app/main/default/objects/Opportunity/validationRules/No_solicitar_IEQ.validationRule-meta.xml
<ValidationRule>
    <fullName>No_solicitar_IEQ</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Tipo__c , &quot;Quote&quot;),
  ISNULL(Import_Export_Quote_Order__c)
)</errorConditionFormula>
    <errorDisplayField>Import_Export_Quote_Order__c</errorDisplayField>
    <errorMessage>Import Export Quote debe ir en blanco</errorMessage>
</ValidationRule>