force-app/main/default/objects/Opportunity/validationRules/OPP009.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP009</fullName>
    <active>true</active>
    <description>Agregar que otro requerimiento especial en campo de texto</description>
    <errorConditionFormula>AND(
  INCLUDES(Requerimientos_especialesNew__c, &quot;Otro&quot;),
  ISBLANK(Comentarios_Otros__c)
)</errorConditionFormula>
    <errorMessage>OPP009 - Es necesario especificar que otro requerimiento especial se necesita en el campo &quot;Comentarios Otros&quot;.</errorMessage>
</ValidationRule>