force-app/main/default/objects/Opportunity/validationRules/OPP010.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP010</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   (RecordType.DeveloperName= &apos;Proyecto&apos;),
				AND(
OR(    ISPICKVAL(StageName, &quot;Explorar&quot;),
ISPICKVAL(StageName, &quot;Construir&quot;),
ISPICKVAL(StageName, &quot;Cotizar&quot;),
ISPICKVAL(StageName, &quot;Presentar&quot;),
ISPICKVAL(StageName, &quot;Implementar&quot;),
ISPICKVAL(StageName, &quot;Cultivar&quot;)),
    OR(
        ISBLANK(Requerimientos_especialesNew__c),
        ISBLANK(Total_Amount_del__c)
    )
))</errorConditionFormula>
    <errorMessage>OPP010 - Debes de especificar los Requeriminetos Especiales y el Total Amount para cambiar de etapa.</errorMessage>
</ValidationRule>