force-app/main/default/objects/Opportunity/validationRules/OPP011.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP011</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordType.Name = &apos;Proyecto&apos;,
    NOT(
        OR(
            ISPICKVAL(Group__c, &quot;SP-PQ-PAQUETERIA&quot;),
            ISPICKVAL(Group__c, &quot;SP-T-CONSOLIDADO&quot;),
            ISPICKVAL(Group__c, &quot;SP-WH-ALMACENAJE&quot;)
        )
    ),
    AND(
        OR(            
            ISPICKVAL(StageName, &quot;Negociación&quot;),
            ISPICKVAL(StageName, &quot;Ejecución&quot;)
        ),
        OR(
            Total_Buy_Price2__c = 0,
            Amount = 0
        )
    )
)</errorConditionFormula>
    <errorMessage>OPP011 - Los productos deben tener un costo de Buy Price y Sell Price para poder cambiar de etapa</errorMessage>
</ValidationRule>