force-app/main/default/objects/Opportunity/validationRules/OPP012.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP012</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
(RecordType.DeveloperName= &apos;Proyecto&apos;),
				AND(
				OR(
ISPICKVAL(StageName, &quot;Cotizar&quot;),
ISPICKVAL(StageName, &quot;Presentar&quot;),
ISPICKVAL(StageName, &quot;Implementar&quot;),
ISPICKVAL(StageName, &quot;Cultivar&quot;)),

(PROJ_TotalQuotes__c  &gt; 0 )
))</errorConditionFormula>
    <errorMessage>OPP012 - Los Productos relacionados a la Oportunidad den tener precio cargado (Sales Price) para poder pasar a la etapa de Cotizar.</errorMessage>
</ValidationRule>