force-app/main/default/objects/Opportunity/validationRules/OPP_Agreed_Shipping.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Agreed_Shipping</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Agreed Shipping&quot;),

OR(
(IEQ_Status__c &lt;&gt; &quot;Approved as Succesful&quot;),
(Total_Quotes_Vendido__c  &lt;&gt; 0 ))

)</errorConditionFormula>
    <errorMessage>OPP004- Se necesita Quote Vendido o Total IEQ</errorMessage>
</ValidationRule>