force-app/main/default/objects/Opportunity/validationRules/OPP_Agreed_Shipping2.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Agreed_Shipping2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Agreed Shipping&quot;),
ISPICKVAL(Tipo__c,&quot;Quote&quot;),

Total_Quotes_Vendido__c  &lt;= 0 

)</errorConditionFormula>
    <errorMessage>OPP005- Se necesita Quote Vendido</errorMessage>
</ValidationRule>