force-app/main/default/objects/Opportunity/validationRules/OPP_Agreed_Shipping3.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_Agreed_Shipping3</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Agreed Shipping&quot;),
ISPICKVAL(Tipo__c,&quot;Import-Export Quote/Order&quot;),
ISPICKVAL(Tipo__c, &quot;Quote&quot;),

IEQ_Status__c &lt;&gt; &quot;Approved as Succesful&quot;

)</errorConditionFormula>
    <errorMessage>OPP006- Se necesita Folio Aprobado</errorMessage>
</ValidationRule>