force-app/main/default/objects/Opportunity/validationRules/OPP_First_Shipment.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP_First_Shipment</fullName>
    <active>false</active>
    <description>Validación de esta etapa</description>
    <errorConditionFormula>AND(
ISPICKVAL(StageName,&quot;First Shipment&quot;),
RecordType.Name = &quot;Standar Opportunity&quot;,
 ( IEQ_Status__c  &lt;&gt;   &quot;Shipped&quot;)
)</errorConditionFormula>
    <errorMessage>OPP008-Para pasar a la siguiente etapa es necesario Shipment</errorMessage>
</ValidationRule>