force-app/main/default/objects/Opportunity/listViews/Flete_Nacional.listView-meta.xml
<ListView>
    <fullName>Flete_Nacional</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Import_Export_Quote_Order__c</columns>
    <columns>IEQ_Status__c</columns>
    <columns>Ruta_Folio__c</columns>
    <columns>Tipo_de_Oportunidad__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.WON</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Type__c</field>
        <operation>equals</operation>
        <value>FN,FN - Flete Nacional</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2022 12:00 AM</value>
    </filters>
    <label>Flete Nacional</label>
</ListView>