force-app/main/default/objects/Opportunity/listViews/MyOpportunities.listView-meta.xml
<ListView>
    <fullName>MyOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Ciente_Capacitado__c</columns>
    <columns>ROI_Analysis_Completed__c</columns>
    <columns>Service_Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Opportunities</label>
</ListView>