force-app/main/default/objects/Opportunity/listViews/Opportunities_Expo_Logistic.listView-meta.xml
<ListView>
    <fullName>Opportunities_Expo_Logistic</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign_Assign__c</field>
        <operation>contains</operation>
        <value>Expo</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>11/1/2021 12:00 AM</value>
    </filters>
    <label>Opportunities Expo Logistic</label>
</ListView>