force-app/main/default/objects/Opportunity/listViews/Paqueteria_y_tarimas.listView-meta.xml
<ListView>
    <fullName>Paqueteria_y_tarimas</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Service_Type__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>PROJ_TotalQuotes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Type__c</field>
        <operation>equals</operation>
        <value>PQ,PQ - Paqueterias,T</value>
    </filters>
    <label>Paqueteria y tarimas</label>
</ListView>