force-app/main/default/objects/Opportunity/listViews/Proyecto_Construir_TNA.listView-meta.xml
<ListView>
    <fullName>Proyecto_Construir_TNA</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>PROJ_TotalQuotes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Proyectos</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Prospectar,Explorar,Construir,Cotizar,Presentar,Implementar,Cultivar</value>
    </filters>
    <filters>
        <field>Service_Type__c</field>
        <operation>equals</operation>
        <value>FN,FN - Flete Nacional</value>
    </filters>
    <label>Proyecto TNA</label>
</ListView>