force-app/main/default/objects/Opportunity/listViews/Proyecto_INTER.listView-meta.xml
<ListView>
    <fullName>Proyecto_INTER</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Usuario_IC__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>PROJ_TotalQuotes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Proyectos</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Construir</value>
    </filters>
    <filters>
        <field>Service_Type__c</field>
        <operation>notEqual</operation>
        <value>FN</value>
    </filters>
    <label>Proyecto INTER</label>
</ListView>