force-app/main/default/objects/Opportunity/listViews/WCA_Dubai.listView-meta.xml
<ListView>
    <fullName>WCA_Dubai</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Campaign_Assign__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Import_Export_Quote_Order__c</columns>
    <columns>IEQ_Status__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Modalidad__c</columns>
    <columns>Tipo_de_Oportunidad__c</columns>
    <columns>Guias__c</columns>
    <columns>Proveedor__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>equals</operation>
        <value>Catalina Carvajal,David Fernandez,Paola Gonzalez,Fernando Treviño</value>
    </filters>
    <filters>
        <field>IEQ_Status__c</field>
        <operation>equals</operation>
        <value>Shipped,Approved as Succesful</value>
    </filters>
    <label>WCA Dubai</label>
</ListView>